set docshell current URI after creating a synchronous about:blank Frankendocument. bug 104361 r=brendan,jst